--- a/src/shared/i18n/de/mail.json
+++ b/src/shared/i18n/de/mail.json
@@ -124,7 +124,7 @@
   "blackSquad": {
     "invitation": {
       "salutation": "",
-      "body": "<p>Hi {firstname},</p><p>zunächst möchte ich mich kurz vorstellen. Mein Name ist Oli und ich bin CMO bei DFX.swiss.</p><p>Wir pflegen seit einiger Zeit ein Telegram-Gruppe für Personen mit größeren Investments über DFX.swiss und möchten dir mit dieser Gruppe</p><p>- ein direktes Sprachrohr zum C-Level der DFX bieten<br>- eine Plattform für Diskussionen bereitstellen<br>- genau hinhören, wenn ihr euch neue Services wünscht<br>- und euch neue Themen und Services vorab vorstellen</p><p>Wir würden uns freuen, wenn du dieser Gruppe beitreten möchtest.</p><p>Wir haben dir hierfür einen Direktzugang zu dieser Gruppe auf deiner persönlichen DFX Payment Seite hinterlegt. Klicke hierfür einfach in der DFX App auf MyDFX und folge dem Link.</p><p>Vielen Dank für dein Vertrauen in uns.<br>Oli</p>",
+      "body": "<p>Hi {firstname},</p><p>zunächst möchte ich mich kurz vorstellen. Mein Name ist Oli und ich bin CMO bei DFX.swiss.</p><p>Wir pflegen seit einiger Zeit eine Telegram-Gruppe für Personen mit größeren Investments über DFX.swiss und möchten dir mit dieser Gruppe</p><p>- ein direktes Sprachrohr zum C-Level der DFX bieten<br>- eine Plattform für Diskussionen bereitstellen<br>- genau hinhören, wenn ihr euch neue Services wünscht<br>- und euch neue Themen und Services vorab vorstellen</p><p>Wir würden uns freuen, wenn du dieser Gruppe beitreten möchtest.</p><p>Wir haben dir hierfür einen Direktzugang zu dieser Gruppe auf deiner persönlichen DFX Payment Seite hinterlegt. Klicke hierfür einfach in der DFX App auf MyDFX und folge dem Link.</p><p>Vielen Dank für dein Vertrauen in uns.<br>Oli</p>",
       "title": "Einladung Black Squad"
     }
   },
